# fluidlab

./: .gitlab-ci.yml  .hgignore  .hgtags  .travis.yml  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  bitbucket-pipelines.yml  environment.yml  modbus_unidrive.py  setup.cfg  setup.py  tox.ini
digiflow/movies/: compute_time_series.dfc  record_movies.dfc  record_movies_exp.dfc  remove_background.dfc  remove_background_single.dfc
doc/: Makefile  conf.py  docattributes.py  environment.yml  example_from_numpy_doc.py  examples.rst  index.rst  install.rst  linuxgpib.rst  mathmacro.py  requirements.txt  to_do.rst  tutorials.rst
doc/For_pypi_redirect/: index.html
doc/examples/: control_motor.rst  demo_graphical_driver_motor.py  drive_motor.py  exp_funcgen_scope.py  exp_imacrt.py  exp_without_instr.py  loop_power_supply.py  loop_with_1instr.rst  modbus_test.py  parallel_tasks.py  parallel_tasks.rst  session_instru.rst
examples/: README  __init__.py  create_exp_TC_lin.py  create_exp_dd.py  example_exp_funcgen_scope.py  example_funcgen_scope.py  exp_funcgen_scope.py  exp_without_instr.py  fill_tank.py  load_working_exp.py  params_creation_TC_base.py  params_creation_TC_lin.py  phystest_funcgen_scope.py  run_exp_control_1cylinder.py  run_exp_control_2cylinders.py  stop_rotating_objects.py  str_path_working_exp.py  test_funcgen_scope.py  traverse_and_probe.py
fluidlab/: __init__.py  _version.py  calibration_pumps.txt  output.py  pinchvalve.py  probes.py  pumps.py  rotatingobjects.py  tanks.py  traverse.py
scripts/: __init__.py  use_funcgen_scope.py
(+190 files in other folders)
