
[options.extras_require]
test =
    pytest
    pyvisa
    pyvisa-sim
    scipy

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc
    scipy

dev =
    ipython
	jupyter
    %(doc)s
    %(test)s

[flake8]
ignore = E225,E226,E303,E201,E202, W503

[coverage:run]
source = ./fluidlab
data_file = .coverage/coverage
omit = */test*.py

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml
